# checkpoint-mcp-on-azure-foundry

./: .env.example  .gitignore  CONTRACT.md  DESIGN.md  README.md  SECURITY.md  azure.yaml  pyproject.toml
.github/workflows/: tests.yml
agent/: Dockerfile  main.py  requirements.txt
chkpmcpaz/: __init__.py  _hosting_server.py  agent.py  azutil.py  bridge.py  cli.py  config.py  creds.py  deploy.py  destroy.py  doctor.py  gaia.py  guardrail.py  hosting.py  keyvault.py  mcp_remote.py  mcp_stdio.py  models.py  providers.py  remote_mcp.py  remote_server.py  ui.py  verify.py
collateral/: Check-Point-MCP-Agent.postman_collection.json
docs/: aws-vs-azure.md  commands.md  guide.html  resources.md  servers.md
docs/diagrams/: README.md  agent-flow.md  architecture.md  where-checkpoint-fits.md
docs/img/: README.md  render-pdfs.sh
docs/scenarios/: creds-and-golive.md  guardrail.md  invoke-from-anywhere.md  local-probe.md  quickstart.md  remote-mcp.md
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: foundry.bicep  keyvault.bicep  monitoring.bicep  registry.bicep  remote-mcp-app.bicep  remote-mcp.bicep  roles.bicep
scripts/: mcp_probe.mjs
tests/: conftest.py  test_agent.py  test_azutil.py  test_bridge.py  test_cli.py  test_config.py  test_creds.py  test_destroy.py  test_doctor.py  test_gaia.py  test_guardrail.py  test_hosting_logic.py  test_keyvault.py  test_mcp_stdio.py  test_models.py  test_providers.py  test_remote_mcp.py  test_review_fixes.py  test_static.py  test_tls.py  test_ui.py
